--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,16 @@
 {
-    "env": {
-        "browser": true,
-        "node": true,
-        "es6": true
-    },
-    "ecmaFeatures": {
-        "jsx": true
-    },
+    "extends": "airbnb",
     "rules": {
         "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
-        "comma-style": [2, "last"],
-        "indent": 2,
-        "no-underscore-dangle": false,
-        "quotes": [2, "single", "avoid-escape"],
-        "semi": [2, "always"],
-        "space-before-function-paren": [2, "never"],
-        "strict": [2, "global"],
+        "comma-dangle": 0,
+        "indent": [2, 4, {"SwitchCase": 1}],
+        "no-const-assign": 2,
+        "space-after-keywords": 0,
+        "max-len": 0,
 
-        "react/jsx-quotes": 2,
-        "react/jsx-no-undef": 2,
-        "react/jsx-uses-react": 2,
-        "react/jsx-uses-vars": 2,
-        "react/no-did-mount-set-state": 2,
-        "react/no-did-update-set-state": 2,
-        "react/no-multi-comp": 2,
-        "react/no-unknown-property": 2,
-        "react/prop-types": 2,
-        "react/react-in-jsx-scope": 2,
-        "react/self-closing-comp": 2,
-        "react/wrap-multilines": 2
-    },
-    "plugins": [
-        "react"
-    ]
+        "react/prop-types": [2, { "ignore": ["children"] }],
+        "react/no-multi-comp": [2, { "ignoreStateless": true }],
+        "react/jsx-closing-bracket-location": 0,
+        "react/jsx-indent-props": [2, 4]
+    }
 }
