--- a/package.json
+++ b/package.json
@@ -27,18 +27,22 @@
   "author": "Tommy Leunen <tommy.leunen@gmail.com> (http://tommyleunen.com/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.19",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "peerDependencies": {
     "react": "0.14.x"
   },
   "scripts": {
+    "lint": "eslint src",
     "compile": "rm -rf lib && babel src --out-dir lib",
     "prepublish": "npm run compile"
   }
