test(clickdrag): Add tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
         "indent": [2, 4, {"SwitchCase": 1}],
         "max-len": 0,
 
-        "react/prop-types": [2, { "ignore": ["children"] }],
-        "react/jsx-indent-props": [2, 4]
+        "react/jsx-indent": [2, 4],
+        "react/jsx-indent-props": [2, 4],
+        "react/prop-types": [2, { "ignore": ["children"] }]
     }
 }
