--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-clickdrag",
-  "version": "3.0.2",
+  "version": "0.0.0-semantically-released",
   "description": "Easily click/touch and drag a react component",
   "main": "lib/clickdrag.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/tleunen/react-clickdrag.git"
+    "url": "https://github.com/tleunen/react-clickdrag.git"
   },
   "bugs": {
     "url": "https://github.com/tleunen/react-clickdrag/issues"
@@ -27,26 +27,45 @@
   "author": "Tommy Leunen <tommy.leunen@gmail.com> (http://tommyleunen.com/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.5.1",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "eslint": "^2.8.0",
+    "babel-register": "^6.8.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.2.0",
+    "eslint": "^2.9.0",
     "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.0",
-    "eslint-plugin-jsx-a11y": "^1.0.3",
+    "eslint-plugin-import": "^1.7.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.0.1",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "mocha": "^2.4.5",
+    "nyc": "^6.4.4",
+    "react": "^15.0.2",
+    "react-addons-test-utils": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "rimraf": "^2.5.2",
+    "sinon": "^1.17.4",
+    "semantic-release": "^4.3.5"
   },
   "peerDependencies": {
     "react": "0.14.x || ^15.0.0-rc",
     "react-dom": "0.14.x || ^15.0.0-rc"
   },
   "scripts": {
-    "lint": "eslint src",
-    "compile": "rm -rf lib && babel src --out-dir lib",
-    "prepublish": "npm run compile"
+    "clean": "rimraf coverage lib out",
+    "react:clean": "rimraf node_modules/react node_modules/react-dom",
+    "react:14": "npm run react:clean && npm i react@0.14 react-dom@0.14",
+    "react:15": "npm run react:clean && npm i react@15 react-dom@15",
+    "test:react:14": "npm run react:14 && npm run test:suite",
+    "test:react:15": "npm run react:15 && npm run test:suite",
+    "test:suite": "mocha --compilers js:babel-register -r ./test/setup.js",
+    "test:watch": "npm run test:suite -- -w",
+    "test": "npm run test:react:14 && nyc npm run test:react:15",
+    "lint": "eslint src test",
+    "compile": "rimraf lib && babel src --out-dir lib",
+    "prepublish": "npm run compile",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   }
 }
