--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-import": "^1.7.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.0.1",
+    "jsdom": "^9.0.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
     "react": "^15.0.2",
@@ -66,6 +67,7 @@
     "test:react:15": "npm run react:15 && npm run test:suite",
     "test:suite": "mocha --compilers js:babel-register -r ./test/setup.js",
     "test:watch": "npm run test:suite -- -w",
+    "test:only": "npm run test:react:14 && npm run test:react:15",
     "test": "npm run test:react:14 && nyc npm run test:react:15 && nyc report --reporter=lcov",
     "lint": "eslint src test",
     "compile": "rimraf lib && babel src --out-dir lib",
