--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-core": "^6.8.0",
+    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.8.0",
     "chai": "^3.5.0",
     "condition-circle": "^1.2.0",
+    "cross-env": "^1.0.8",
     "enzyme": "^2.2.0",
     "eslint": "^2.13.0",
     "eslint-config-airbnb": "^9.0.1",
@@ -63,15 +65,24 @@
     "react:clean": "rimraf node_modules/react node_modules/react-dom node_modules/react-addons-test-utils",
     "react:14": "npm run react:clean && npm i react@0.14 react-dom@0.14 react-addons-test-utils@0.14",
     "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
-    "test:react:14": "npm run react:14 && npm run test:suite",
-    "test:react:15": "npm run react:15 && npm run test:suite",
+    "test:react:14": "npm run react:14 && cross-env NODE_ENV=test npm run test:suite",
+    "test:react:15": "npm run react:15 && cross-env NODE_ENV=test npm run test:suite",
     "test:suite": "mocha --compilers js:babel-register -r ./test/setup.js",
     "test:watch": "npm run test:suite -- -w",
     "test:only": "npm run test:react:14 && npm run test:react:15",
-    "test": "npm run test:react:14 && nyc npm run test:react:15 && nyc report --reporter=lcov",
+    "pretest": "npm run lint",
+    "test": "npm run test:react:14 && cross-env NODE_ENV=test nyc npm run test:react:15",
     "lint": "eslint src test",
     "compile": "rimraf lib && babel src --out-dir lib",
     "prepublish": "npm run compile",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
