--- a/package.json
+++ b/package.json
@@ -28,28 +28,28 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-core": "^6.8.0",
-    "babel-plugin-__coverage__": "^11.0.0",
+    "babel-core": "^6.10.4",
+    "babel-plugin-istanbul": "^1.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "condition-circle": "^1.2.0",
     "cross-env": "^1.0.8",
-    "enzyme": "^2.2.0",
-    "eslint": "^2.13.0",
+    "enzyme": "^2.4.1",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.9.1",
-    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
     "eslint-plugin-react": "^5.2.2",
-    "jsdom": "^9.4.0",
-    "mocha": "^2.4.5",
-    "nyc": "^6.6.1",
-    "react": "^15.0.2",
-    "react-addons-test-utils": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "rimraf": "^2.5.2",
+    "jsdom": "^9.4.1",
+    "mocha": "^2.5.3",
+    "nyc": "^7.0.0",
+    "react": "^15.2.1",
+    "react-addons-test-utils": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "rimraf": "^2.5.3",
     "semantic-release": "^4.3.5",
     "sinon": "^1.17.4"
   },
@@ -73,11 +73,14 @@
     "pretest": "npm run lint",
     "test": "npm run test:react:14 && cross-env NODE_ENV=test nyc npm run test:react:15",
     "lint": "eslint src test",
-    "compile": "rimraf lib && babel src --out-dir lib",
+    "compile": "rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib",
     "prepublish": "npm run compile",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "nyc": {
+    "include": [
+      "src/*.js"
+    ],
     "sourceMap": false,
     "instrument": false,
     "reporter": [
