--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-clickdrag",
-  "version": "0.0.0-semantically-released",
+  "version": "3.0.2",
   "description": "Easily click/touch and drag a react component",
   "main": "lib/clickdrag.js",
   "files": [
@@ -27,38 +27,34 @@
   "author": "Tommy Leunen <tommy.leunen@gmail.com> (http://tommyleunen.com/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
-    "babel-plugin-istanbul": "^1.0.3",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-plugin-istanbul": "^1.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.9.0",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
-    "condition-circle": "^1.2.0",
-    "cross-env": "^1.0.8",
+    "cross-env": "^2.0.0",
     "enzyme": "^2.4.1",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "jsdom": "^9.4.1",
-    "mocha": "^2.5.3",
-    "nyc": "^7.0.0",
-    "react": "^15.2.1",
-    "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "rimraf": "^2.5.3",
-    "semantic-release": "^4.3.5",
-    "sinon": "^1.17.4"
+    "mocha": "^3.0.1",
+    "nyc": "^7.1.0",
+    "react": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.5",
+    "standard-version": "^2.4.0"
   },
   "peerDependencies": {
     "react": "0.14.x || ^15.0.0-rc",
     "react-dom": "0.14.x || ^15.0.0-rc"
-  },
-  "release": {
-    "verifyConditions": "condition-circle"
   },
   "scripts": {
     "clean": "rimraf coverage lib out",
@@ -75,7 +71,7 @@
     "lint": "eslint src test",
     "compile": "rimraf lib && cross-env NODE_ENV=production babel src --out-dir lib",
     "prepublish": "npm run compile",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "release": "standard-version"
   },
   "nyc": {
     "include": [
