--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,16 @@
             "experimentalObjectRestSpread": true
         }
     },
+    "env": {
+        "browser": true
+    },
     "rules": {
         "comma-dangle": 0,
         "indent": [2, 4, {"SwitchCase": 1}],
         "max-len": 0,
 
+        "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
         "react/jsx-indent": [2, 4],
-        "react/jsx-indent-props": [2, 4],
-        "react/prop-types": [2, { "ignore": ["children"] }]
+        "react/jsx-indent-props": [2, 4]
     }
 }
