--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "enzyme": "^2.5.1",
-    "eslint": "^3.9.0",
+    "eslint": "^3.11.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
     "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
     "nyc": "^10.0.0",
@@ -79,6 +79,16 @@
     "reporter": [
       "lcov",
       "text"
+    ]
+  },
+  "greenkeeper": {
+    "ignore": [
+      "eslint",
+      "eslint-plugin-import",
+      "eslint-plugin-jsx-a11y",
+      "eslint-plugin-react",
+      "react-dom",
+      "react-addons-test-utils"
     ]
   }
 }
