--- a/package.json
+++ b/package.json
@@ -28,26 +28,26 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
+    "babel-core": "^6.21.0",
     "babel-plugin-istanbul": "^3.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
+    "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "cross-env": "^3.1.3",
-    "enzyme": "^2.5.1",
-    "eslint": "^3.11.0",
-    "eslint-config-airbnb": "^13.0.0",
+    "enzyme": "^2.7.0",
+    "eslint": "^3.12.2",
+    "eslint-config-tleunen-react": "^1.0.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1",
-    "jsdom": "^9.8.3",
-    "mocha": "^3.1.2",
+    "eslint-plugin-react": "^6.8.0",
+    "jsdom": "^9.9.1",
+    "mocha": "^3.2.0",
     "nyc": "^10.0.0",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "standard-version": "^4.0.0"
