Update project to react16, jest, enzyme3

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,9 @@
 {
   "presets": [
-    "latest",
+    "env",
     "react"
   ],
   "plugins": [
-      "transform-object-rest-spread",
-  ],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    }
-  }
+      "transform-object-rest-spread"
+  ]
 }
